== 2.5.3 ==
Release date: August 4, 2021
* Added: Posts – Link target option for title and thumbnail
* Added: Posts – Center Mode option for Carousel layout
* Added: Posts – Integration for The Events Calendar plugin
* Fixed: Posts - Non-Ajax Pagination was not working

== 2.5.2 ==
Release date: July 22, 2021
* Fixed: Price Menu - PHP error

== 2.5.1 ==
Release date: July 21, 2021
* Fixed: PHP error in Buttons widget

== 2.5.0 ==
Release date: July 21, 2021
* New: Content Reveal Widget
* Added: Pricing Table - Options to change HTML tag for title and subtitle
* Added: Price Menu - Option to change HTML tag for title
* Added: Buttons - Text shadow option
* Enhancement: Pricing Table - Updated Feature Text field with Textarea field
* Gravity Forms, Caldera Forms, WP Forms - Removed duplicate upgrade pro notice

== 2.4.2 ==
Release date: July 15, 2021
* Fixed: Team Member - HTML error when link is applied to title
* Fixed: Advanced Accordion - Border radius was not working when background is applied to title and content
* Fixed: Compatibility issues with PHP 8

== 2.4.1 ==
Release date: July 8, 2021
* Added: Logo Carousel - Vertical and horizontal alignment options
* Added: Info Box Carousel - Pause on Hover option
* Enhancement: Info Box Carousel - Updated description control to WYSIWYG
* Fixed: Flip Box - Issue with Icon Size option
* Added: Team Member Carousel - Option to change direction of carousel

== 2.4.0 ==
Release date: June 23, 2021
* New: Wrapper Link extension
* Fixed: Info Box Carousel - Icon type text was not showing on frontend
* Enhancement: Info Box Carousel - Added  Percentage unit support to icon image width
* Enhancement: Info Box Carousel - Added default size of 100px to icon image
* Fixed: Core - PHP error in validate_html_tag() function

== 2.3.6 ==
Release date: June 1, 2021
* Added: Info Box Carousel - Centered Slides option
* Fixed: Pricing Table - Table alignment issue
* Fixed: Pricing Table - Features icon position issue

== 2.3.5 ==